<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_slogan"
        android:textSize="20sp"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:layout_margin="18dp"
        android:textColor="@color/black"
        android:elevation="10dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/set_event"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_event"
        android:layout_margin="20dp"
        android:padding="10dp"
        android:elevation="10dp">
    </androidx.appcompat.widget.AppCompatButton>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/contact_list_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contact_list_name"
        android:layout_margin="20dp"
        android:padding="10dp"
        android:elevation="10dp">
    </androidx.appcompat.widget.AppCompatButton>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/photos_library_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/photos_library"
        android:layout_margin="20dp"
        android:padding="10dp"
        android:elevation="10dp">
    </androidx.appcompat.widget.AppCompatButton>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/open_camera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/camera_button"
        android:layout_margin="20dp"
        android:padding="10dp"
        android:elevation="10dp">
    </androidx.appcompat.widget.AppCompatButton>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/camera_button"
        android:layout_margin="20dp"
        android:padding="10dp"
        android:elevation="10dp">
    </androidx.appcompat.widget.AppCompatButton>

</LinearLayout>