<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image_view_background"
        android:src="@drawable/background_image"
        android:scaleType="centerCrop"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <TextView
        android:id="@+id/txt_slogan"
        style="@style/TextAppearance.AppCompat.Headline"
        app:layout_constraintBottom_toTopOf="@id/edit_text_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/txt_slogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal" />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_text_email"
        android:layout_width="match_parent"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="18dp"
        app:layout_constraintBottom_toTopOf="@id/edit_text_password"
        android:layout_height="50dp"
        android:hint="@string/email"
        android:imeOptions="actionDone"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:background="@drawable/bg_edit_text_normal"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        android:inputType="text"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_text_password"
        android:layout_width="match_parent"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="36dp"
        app:layout_constraintBottom_toTopOf="@id/button_entrar"
        android:layout_height="50dp"
        android:hint="@string/senha"
        android:imeOptions="actionDone"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:background="@drawable/bg_edit_text_normal"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        android:inputType="textPassword"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_entrar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/entrar"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="36dp"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:background="@drawable/bg_button_normal"
        app:layout_constraintBottom_toTopOf="@id/txt_forgot_password"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_forgot_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textAlignment="center"
        android:layout_marginBottom="36dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center_horizontal" />

</androidx.constraintlayout.widget.ConstraintLayout>